tg_parser/tests/valid/valid1_inv.tg
gate INV(in a; out y) {
    pmos drain=y, gate=a, source=VDD;
    nmos drain=y, gate=a, source=GND;
}

simulate INV(a=0);
simulate INV(a=1);
