tg_parser/tests/invalid/invalid3_missing_transistor_comma.tg
gate BadTrans(in a; out y) {
    nmos drain=y gate=a, source=GND;
}
